--- a/package.json
+++ b/package.json
@@ -67,6 +67,16 @@
     "buffer": "5.2.1",
     "connext": "4.2.5",
     "content-hash": "2.3.2",
+    "daf-core": "^1.4.1",
+    "daf-data-store": "^1.5.0",
+    "daf-debug": "^1.4.1",
+    "daf-did-jwt": "^1.4.1",
+    "daf-ethr-did-react-native": "^1.4.1",
+    "daf-react-native-sqlite3": "^1.5.0",
+    "daf-selective-disclosure": "^1.5.1",
+    "daf-url": "^1.4.1",
+    "daf-w3c": "^1.4.1",
+    "did-resolver": "^1.1.0",
     "dnode": "1.2.2",
     "eth-contract-metadata": "1.11.0",
     "eth-ens-namehash": "2.0.8",
@@ -82,6 +92,7 @@
     "ethjs-ens": "2.0.1",
     "ethjs-query": "0.3.8",
     "ethjs-unit": "0.1.6",
+    "ethr-did-resolver": "^2.1.0",
     "events": "3.0.0",
     "fuse.js": "3.4.4",
     "gaba": "1.9.2",
@@ -134,9 +145,11 @@
     "react-native-search-api": "1.2.0",
     "react-native-sensors": "5.3.0",
     "react-native-share": "git+ssh://git@github.com/MetaMask/react-native-share.git#androidx",
+    "react-native-sqlite-storage": "^4.1.0",
     "react-native-svg": "9.13.3",
     "react-native-swipe-gestures": "1.0.3",
     "react-native-tcp": "3.3.0",
+    "react-native-uport-signer": "1.5.2",
     "react-native-v8": "0.59.10-patch.4",
     "react-native-vector-icons": "6.4.2",
     "react-native-view-shot": "git+ssh://git@github.com/MetaMask/react-native-view-shot.git#androidx",
@@ -148,6 +161,7 @@
     "react-redux": "5.1.1",
     "readable-stream": "1.0.33",
     "redux": "4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "1.5.3",
     "redux-persist": "5.10.0",
     "stream-browserify": "1.0.0",
@@ -156,6 +170,7 @@
     "url-parse": "1.4.4",
     "valid-url": "1.0.9",
     "vm-browserify": "0.0.4",
+    "web-did-resolver": "^1.2.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
