--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "redux": "4.0.1",
     "redux-mock-store": "1.5.3",
     "redux-persist": "5.10.0",
+    "sinon": "^8.1.1",
     "stream-browserify": "1.0.0",
     "through2": "3.0.1",
     "url": "0.11.0",
