--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "@kancha/kancha-ui": "1.0.0-beta.45",
     "@react-native-community/async-storage": "1.2.0",
     "@react-native-community/netinfo": "4.1.5",
     "@tradle/react-native-http": "2.0.1",
@@ -74,6 +75,7 @@
     "daf-ethr-did-react-native": "^1.4.1",
     "daf-react-native-sqlite3": "^1.5.0",
     "daf-selective-disclosure": "^1.5.1",
+    "daf-trust-graph": "^1.4.1",
     "daf-url": "^1.4.1",
     "daf-w3c": "^1.4.1",
     "did-jwt": "^4.0.0",
@@ -150,7 +152,6 @@
     "react-native-svg": "9.13.3",
     "react-native-swipe-gestures": "1.0.3",
     "react-native-tcp": "3.3.0",
-    "react-native-uport-signer": "1.5.2",
     "react-native-v8": "0.59.10-patch.4",
     "react-native-vector-icons": "6.4.2",
     "react-native-view-shot": "git+ssh://git@github.com/MetaMask/react-native-view-shot.git#androidx",
