fix: DAF upgrade. KMS + IdentityStore

--- a/package.json
+++ b/package.json
@@ -68,16 +68,16 @@
     "buffer": "5.2.1",
     "connext": "4.2.5",
     "content-hash": "2.3.2",
-    "daf-core": "^1.4.1",
-    "daf-data-store": "^1.5.0",
-    "daf-debug": "^1.4.1",
-    "daf-did-jwt": "^1.4.1",
-    "daf-ethr-did-react-native": "^1.4.1",
-    "daf-react-native-sqlite3": "^1.5.0",
-    "daf-selective-disclosure": "^1.5.1",
-    "daf-trust-graph": "^1.4.1",
-    "daf-url": "^1.4.1",
-    "daf-w3c": "^1.4.1",
+    "daf-core": "^2.3.10",
+    "daf-data-store": "^2.3.11",
+    "daf-debug": "^2.3.10",
+    "daf-did-jwt": "^2.3.10",
+    "daf-ethr-did": "^2.3.13",
+    "daf-react-native-sqlite3": "^2.3.11",
+    "daf-selective-disclosure": "^2.3.10",
+    "daf-trust-graph": "^2.3.14",
+    "daf-url": "^2.3.12",
+    "daf-w3c": "^2.3.12",
     "did-jwt": "^4.0.0",
     "did-resolver": "^1.1.0",
     "dnode": "1.2.2",
