--- a/ios/MetaMask.xcodeproj/xcshareddata/xcschemes/MetaMask.xcscheme
+++ b/ios/MetaMask.xcodeproj/xcshareddata/xcschemes/MetaMask.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MetaMask.app"
+               BuildableName = "DaftMask.app"
                BlueprintName = "MetaMask"
                ReferencedContainer = "container:MetaMask.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MetaMask.app"
+            BuildableName = "DaftMask.app"
             BlueprintName = "MetaMask"
             ReferencedContainer = "container:MetaMask.xcodeproj">
          </BuildableReference>
@@ -68,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MetaMask.app"
+            BuildableName = "DaftMask.app"
             BlueprintName = "MetaMask"
             ReferencedContainer = "container:MetaMask.xcodeproj">
          </BuildableReference>
@@ -85,7 +85,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MetaMask.app"
+            BuildableName = "DaftMask.app"
             BlueprintName = "MetaMask"
             ReferencedContainer = "container:MetaMask.xcodeproj">
          </BuildableReference>
